src/test/ui/resolve/token-error-correct-3.stderr
error: incorrect close delimiter: `}`
  --> $DIR/token-error-correct-3.rs:27:9
   |
LL |         if !is_directory(path.as_ref()) {
   |                                         - close delimiter possibly meant for this
LL |             callback(path.as_ref();
   |                     - un-closed delimiter
...
LL |         } else {
   |         ^ incorrect close delimiter

error: expected one of `)`, `,`, `.`, `?`, or an operator, found `;`
  --> $DIR/token-error-correct-3.rs:24:35
   |
LL |             callback(path.as_ref();
   |                     -             ^
   |                     |             |
   |                     |             expected one of `)`, `,`, `.`, `?`, or an operator here
   |                     |             help: ...the missing `)` may belong here
   |                     if you meant to close this...

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `)`
  --> $DIR/token-error-correct-3.rs:27:9
   |
LL |             fs::create_dir_all(path.as_ref()).map(|()| true)
   |                                                             - expected one of `.`, `;`, `?`, `}`, or an operator here
LL |         } else {
   |         ^ unexpected token

error[E0308]: mismatched types
  --> $DIR/token-error-correct-3.rs:26:13
   |
LL |             fs::create_dir_all(path.as_ref()).map(|()| true)
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^- help: try adding a semicolon: `;`
   |             |
   |             expected (), found enum `std::result::Result`
   |
   = note: expected type `()`
              found type `std::result::Result<bool, std::io::Error>`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
